added support for weights_path and download options in config file

--- a/luminoth/models/fasterrcnn/base_config.yml
+++ b/luminoth/models/fasterrcnn/base_config.yml
@@ -135,6 +135,8 @@ model:
     trainable: True
     # From which file to load the weights.
     weights:
+    # From which path to load the weights.
+    weights_path:
     # Should we download weights if not available.
     download: True
     # Which endpoint layer to use as feature map for network.
